--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
