--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
+    "next-video": "^1.4.0",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-lazy-load-image-component": "^1.6.2",
     "react-leaflet": "^4.2.1",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.42",
     "tailwindcss": "^3.4.10"
   }
